# memosearch

./: LICENSE  QA.txt  README.md  code_coverage_report.txt  dd.md  design_document.txt
real_src/: QA.txt  package-lock.json  package.json
real_src/src/: App.jsx
src/: MemoSearch.command  PrintNotes.scpt  QA.txt  boot.sh  getNotes.sh  main.js  package-lock.json
src/backend/docs/source/: conf.py  memosearch.rst
src/backend/src/: '  .env  .flaskenv  app.py  models.py  pyproject.toml  retrieve_blueprints.py  upload_blueprints.py
src/backend/src/instance/: alter_table.sql  refresh_index_with_db.py
src/backend/src/memosearch/: .env  __init__.py  app.py  db.py  models.py  retrieve_blueprints.py  schema.sql  upload_blueprints.py
src/backend/src/templates/: base.html  link.html  note.html  screenshot.html
src/backend/src/tests/: conftest.py  test_data.sql  test_factory.py  test_retrieve.py  test_upload.py
src/engine/: app.py  weather_engine.py
src/frontend/: .env  package-lock.json  package.json
src/frontend/public/: index.html
src/frontend/src/: App.jsx
src/frontend/src/components/: LinkEditor.jsx  LinkExperiment.jsx  LinkTable.jsx  LinksPage.jsx  MainPage.jsx  MainPageContent.jsx  NoteEditor.jsx  NoteTable.jsx  NotesPage.jsx  ScreenshotEditor.jsx  ScreenshotsPage.jsx  SearchBar.jsx  SearchPage.jsx  SearchResult.jsx  SearchResults.jsx  ViewDropdown.jsx  (+3 more)
src/gui/: index.html  links.html  screenshots.html
src/gui/backend_calls/: weather.js
src/public/: main.js
src/src/components/: LinksPage.jsx  MainPage.jsx  NotesPage.jsx  SearchPage.jsx  search.html
