
[project]
name = "memosearch"
version = "1.0.0"
description = "A search engine / note taking app for screenshots, links, and text."
dependencies = [
    "flask",
    "flask-cors",
    "flask-sqlalchemy",
    "pillow",
    "thefuzz",
    "pytest",
    "coverage",
]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"
