
[project]
name = "memosearch"
version = "1.0.0"
description = "A search engine / note taking app for screenshots, links, and text."
dependencies = [
    "flask",
    "flask-cors",
    "flask-sqlalchemy",
    "pillow",
    "thefuzz",
    "pytest",
    "coverage",
    "python-dotenv",
]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["memosearch"]
